@@ -110,6 +110,8 @@ Optimizations
 
 Bug Fixes
 ----------------------
+* SOLR-3068: Fixed NPE in ThreadDumpHandler (siren)
+
 * SOLR-2912: Fixed File descriptor leak in ShowFileRequestHandler (Michael Ryan, shalin)
 
 * SOLR-2819: Improved speed of parsing hex entities in HTMLStripCharFilter
